ullekha correction complete upto samatAjala word

--- a/tex-for-print/811-936.tex
+++ b/tex-for-print/811-936.tex
@@ -3697,8 +3697,6 @@ parxBuve sakala jagatapxrXBuve savARcAra | parxBuve madivxBuve cinamxyane.
 \newmeaning{\ullekha{satayxsadAcAravuLaLx sadugxruliMgajaMgamada nijaniSaThxtavxmaM tiLidu. (savasaM. 2; alalxma. 800-230); paraMjoyxVti sadugxruliMgavu soVMkida sadaBxkatxna... (savasaM. 6; uripe. 1483-525); catuviRdha parxsAdava BoVgisabalAlxtane sadugxruliMgajaMgama savxrUpu... (savasaM. 10; gurusi. 705-394); sadugxruliMgavenanx aMgadalilxralu... (savasaM. 12; deVshikeVM. 300-92); hiVgeMdu A shiSayxMge boVdhisi, kaqtAthaRna mADida... sadugxruliMgaMge namoV namoVyeMdu badukidenu kANA... (savasaM. 13; bAlasaM. 371-167).}}
 \end{entry}
 
-%raghu, ullekha correction from here
-
 \begin{entry}
 \word{sadoyxVjAta}
 \meaning{\artha{parashivana aidu muKagaLalilx pashicxma dikikxna muKa. sadoyxVjAta muKadiMda janisida naMdA eMba goVvina goVmayadiMda viBUtiyanunx tayArisalAgutatxde. parashivana I muKadiMdaleV reVNuka eMba shivana gaNeVshavxranu janisidanu.}}
@@ -3763,14 +3761,13 @@ AgenxVyaM Basamx sadoyxVjAtAdipaMcabarxhamxmaMterxYH parigaqhayx... |
 \newmeaning{\artha{sadoyxVjAtamaMtarx.}
 \ullekha{sadoyxVjAta vAmadeVva aGoVra tatupxruSa IshAnaveMba paMcabarxhamxmaMtarxMgaLaM ...lwkika deVsha BASAmaMtarxMgaLaM  beV{\ro}beV{\ro} viveVkisi noVDi (viveVka. 75).}}
 \newmeaning{\artha{shiva; Ishavxra.}
-\ullekha{upapxraguDi naMdivAhana sadoyxVjAtana bAgila muMde... (savasaM. 1; basava. 529-131); sidadhxrAmayayxnanuva nibuRdidhx manujaru etatxbalalxro... sadoyxVjAtavadanane balalx... (savasaM. 2; alalxma. 1584-470); gudasAthxnadalilx AdhAracakarx, alilxge paqthivxyeMba mahABUta... sadoyxVjAtavakatxrX... (savasaM. 3; cenanxba. 1149-392); shivaMge paMcamuKaveMbuda mUloVkavelalx balulxdu... muMBAgavadu sadoyxVjAta, balaBAgavadu tatupxruSa... (savasaM. 4; sidadhxrA. 1735-493); sadugxru sAvxmi shiSayxMge anugarxhava mADuvalilx... sadoyxVjAta vAmadeVva aGoVra tatupxruSa IshAnaveMba... (savasaM. 5; akakxma. 393-190).}}
+\ullekha{upapxraguDi naMdivAhana sadoyxVjAtana bAgila muMde sArutetxYdAve, noVDA. shurxtigaLU nAlukx veVdavU husiyade (savasaM. 1; basava. 529-131); sidadhxrAmayayxnanuva nibuRdidhx manujaru etatxbalalxro... sadoyxVjAtavadanane balalx... (savasaM. 2; alalxma. 1584-470); gudasAthxnadalilx AdhAracakarx, alilxge paqthivxyeMba mahABUta... sadoyxVjAtavakatxrX... (savasaM. 3; cenanxba. 1149-392); naraMge paMcamuKaveMbuda ArU ariyaru, muMBAgavadu sadoyxVjAta, balaBAgavadu tatupxruSa... (savasaM. 4; sidadhxrA. 1735-493); sadoyxVjAta vAmadeVva aGoVra tatupxruSa IshAnaveMba paMcakaLashadaBiSeVkava mADisalu (savasaM. 5; akakxma. 393-190).}}
 \end{entry}
 
 \begin{entry}
 \word{sadoyxVjAtamaMtarx}
 \meaning{\arthanonum{parashivana paMcamuKagaLalilx oMdAda sadoyxVjAtamuKakekx saMbaMdhisida maMtarx; paMcabarxhamxmaMtarxgaLalilx oMdu.}
-\ullekha{OM hArxM nAM sadoyxVjAtAya namaH -idu pAdakekx saMbaMdhavAgutatxde ...OM harxH OM haqdayAya namaH idu savARMgadalilx saMbaMdhavAgutatxde. I maMtarxgaLige anukarxmavAgi sadoyxVjAtamaMtarx, vAmadeVvamaMtarx, aGoVramaMtarx, tatupxruSamaMtarx, IshAnamaMtarx, haqdayamaMtarx eMdu hesarugaLirutatxve. BasomxVdUdhxLana kAladalilx I maMtarxgaLanunx nishicxta saMKeyxyiMda ucacxrisutatx AyAsAthxnagaLalilx Basitavanunx saMbaMdhisikoLuLxvudu (shivAkoV. 158-257).}
-\ullekha{paMcabarxhamx maMtarxve shivana deVhaveMdarivudayAyx... pAdave sadoyxVjAtamaMtarxvayAyx!... (savasaM. 3; cenanxba. 1324-469); OMkAraveV shiva, yakAraveV sadAshiva... matetx nakAraveV sadoyxVjAtamaMtarxmUtiR... (savasaM. 11; toVMtasi. 200-96).}}
+\ullekha{haqdayave aGoVra, guhayxve vAmadeVva, pAdave sadoyxVjAtamaMtarxvayAyx!... (savasaM. 3; cenanxba. 1324-469); iMtivu maMtarxmUtiRya vaNaRBeVdaveMdarivudayayx matetx nakAraveV sadoyxVjAtamaMtarxmUtiR... (savasaM. 11; toVMtasi. 200-96); OM hArxM nAM sadoyxVjAtAya namaH -idu pAdakekx saMbaMdhavAgutatxde ...OM harxH OM haqdayAya namaH idu savARMgadalilx saMbaMdhavAgutatxde. I maMtarxgaLige anukarxmavAgi sadoyxVjAtamaMtarx, vAmadeVvamaMtarx, aGoVramaMtarx, tatupxruSamaMtarx, IshAnamaMtarx, haqdayamaMtarx eMdu hesarugaLirutatxve. BasomxVdUdhxLana kAladalilx I maMtarxgaLanunx nishicxta saMKeyxyiMda ucacxrisutatx AyAsAthxnagaLalilx Basitavanunx saMbaMdhisikoLuLxvudu (shivAkoV. 158-257).}}
 \end{entry}
 
 \begin{entry}
@@ -3798,8 +3795,9 @@ yAtayxtayxMtavirakAtxnAM sadoyxV nivARNadA tu sA |
 \begin{entry}
 \word{sadoyxVnumxkatx}
 \meaning{\arthanonum{saMsArabaMdhanadiMda biDugaDe hoMdidavanu; jiVvanumxkatx.}
-\ullekha{kaMDudelalx pAvana keVLitetxlalx paramaboVdhe... oDane nuDidavarelalx sadoyxVnumxkatxru... (savasaM. 2; alalxma. 1037-311); shudadhxliMgavanu parxsidadhx karadali iTuTx... sadoyxVnumxkatxna mADi keYvalayxpadavideMdu... (savasaM. 4; sidadhxrA. 1021-294); Ganakekx Gana mahimeya paDevarelalxru rudArxkiSxya dharisipapxru... AtaneV sadoyxVnumxkatxnu... (savasaM. 6; uripe. 1378-461); huTuTx hoMdugeTuTxdeV nivARNa... iMtapapx nivARNa sadoyxVnumxkitx swrASaTxrX soVmeVshavxrA... (savasaM. 6; Adayayx. 1155-364); saMsArakekx heVsi... iMtu, shirxVguruvinupadeVshadiMda sadoyxVnumxkatxnAdenayAyx... (savasaM. 11; savxtaMtarx. 865-429).}}
+\ullekha{oDane nuDidavarelalx sadoyxVnumxkatxru... (savasaM. 2; alalxma. 1037-311); hodidxda parxpaMcuva kaLedu nitayxnenesi sadoyxVnumxkatxna mADi keYvalayxpadavideMdu... (savasaM. 4; sidadhxrA. 1021-294); I karxmavaridu rudArxkiSxya dharisidAtaneV AtaneV sadoyxVnumxkatxnu... (savasaM. 6; uripe. 1378-461); kAyaveV shivakAyavAgi, pArxNaveV parashivanAyitutx. iMtu, shirxVguruvinupadeVshadiMda sadoyxVnumxkatxnAdenayAyx... (savasaM. 11; savxtaMtarx. 865-429).}}
 \end{entry}
+%huTuTx hoMdugeTuTxdeV nivARNa... iMtapapx nivARNa sadoyxVnumxkitx swrASaTxrX soVmeVshavxrA... (savasaM. 6; Adayayx. 1155-364); saMsArakekx heVsi...
 
 \begin{entry}
 \word{sadoyxVmukatx}
@@ -3826,10 +3824,11 @@ itAyxdishayx punadaRdAyxtf sadoyxVmukitxsamAhavxyAmf ||
 \smallskip
 \pauthor{(kA. A., kirx. pA., 1. 111, 117)}
 \smallskip
-\newmeaning{\ullekha{biDi biDi viSuNxva, nimage gatige sAdhanavalalx, kaMDire ele divxjarirA... tameVva sharaNaM ceVtasxdoyxVmukitxM sugacaCxti||... (savasaM. 9; saMapapx. 374-111); matatxmA, paqthAvxyXdiBUtaMgaLaM petatx... sadoyxVmukitxparxdamAdiVshAnabarxhamxM virAjikuM... (savasaM. 11; imamxDi. 1353-631).}}
+\newmeaning{\ullekha{iMtiV tirxvidhadalilx saMpananxnAda sadoyxVmukitxparxdamAdiVshAnabarxhamxM virAjikuM... (savasaM. 11; imamxDi. 1353-631).}}
 \smallskip
 \newmeaning{\arthanonum{\SEE{diVkASx, sadoyxVnivARNadA (diVkASx)}}}
 \end{entry}
+%biDi biDi viSuNxva, nimage gatige sAdhanavalalx, kaMDire ele divxjarirA... tameVva sharaNaM ceVtasxdoyxVmukitxM sugacaCxti||... (savasaM. 9; saMapapx. 374-111); matatxmA, paqthAvxyXdiBUtaMgaLaM petatx...
 
 \begin{entry}
 \word{sadhAyxna}
@@ -3848,13 +3847,13 @@ sagaBARdapi sAhasarxM sadhAyxnoV japa ucayxteV |
 \begin{entry}
 \word{sananxhita parxsAdi}
 \meaning{\arthanonum{sAdhAraNa sAdhakaru liMgakekx vasutxgaLanunx apiRsuvAga liMgavanunx muTiTx pUjisi, vasutxgaLanunx muTiTx apiRsutAtxre. idariMda, avaru liMgadiMda vasutxgaLanunx dUraviTiTxdAdxre eMdU, tAvu liMgadiMda BinanxveMdu tiLidukoMDidAdxreMdU vayxkatxvAgutatxde. Adare sananxhita parxsAdiyu beVre vasutxgaLanUnx alalxde, tananx jAcnxneVMdirxya, kameRVMdirxya matutx aMtaHkaraNa matutx jiVvagaLanUnx apiRsutAtxne. ivana apaRNe yAvAgalU mAnasikaveV horatu iMdirxyagoVcaravalalx.}
-\ullekha{aMgave liMgavAgi, liMgave pArxNavAgi... samatAparxsAdi, sananxhitaparxsAdi, samAdhAnaparxsAdi... (savasaM. 8; maDimA. 444-167).}}
+\ullekha{iMtiV tirxvidhadalilx saMpananxnAda samatAparxsAdi, sananxhitaparxsAdi, samAdhAnaparxsAdi kalideVvayAyx (savasaM. 8; maDimA. 444-167).}}
 \end{entry}
 
 \begin{entry}
 \word{sananxhita liMga}
 \meaning{\arthanonum{parashiva(liMga) horagidAdxneMdu tiLiyade tanonxLageV idAdx\-neMdU, tAnu mADuvudelalxvU liMgakAkxgiyeV eMdu tiLidukoMDare, liMga saninxhitavAgide eMdathaR.}
-\ullekha{iSaTxliMgadalilx vishAvxsa balidare AyataliMga... BinanxvAgi toVrade, anupama pariNAma BaritavAdalilx sananxhitaliMga... (savasaM. 2; alalxma. 944-284); AyataliMgadalilx AcAravaratu... sananxhitaliMgadalilx anuBAvavaratu... (savasaM. 3; cenanxba. 487-149); AyataliMgadalilx niVvenage AcArava toVridirAgi... sananxhitaliMgadalilx niVvenage pariNAmava toVridirAgi... (savasaM. 9; apapxNaNx. 889-274); AyataliMga matarxyXva nuMgitutx... sananxhitaliMga pAtALava nuMgitutx... (savasaM. 10; kADasi. 447-242).}}
+\ullekha{A iSaTxliMgada BAva manoVveVdayxvAda suKavu BinanxvAgi toVrade, anupama pariNAma BaritavAdalilx sananxhitaliMga... (savasaM. 2; alalxma. 944-284); AmataliMgadalilx AcAravaratu, sAvxmataliMgadalilx vicAravaratu, sananxhitaliMgadalilx anuBAvavaratu (savasaM. 3; cenanxba. 487-149); sananxhitaliMgadalilx niVvenage pariNAmava toVridirAgi... (savasaM. 9; apapxNaNx. 889-274); sananxhitaliMga pAtALava nuMgitutx... (savasaM. 10; kADasi. 447-242).}}
 \end{entry}
 
 \begin{entry}
@@ -3895,7 +3894,7 @@ sAninxdhayxmAtemxVshavxrasaninxdhAnamf |
 \smallskip
 \pauthor{(vA. shu.A., 1. 121)}
 \smallskip
-\newmeaning{\ullekha{daqSaTxdalilx naDe nuDi tanukirxV, adaqSaTxdalilx pArxNa manakirxV AcAradalilx... saninxdhAnatapxraM liMgaM sAthxpayxmeVtatxtutx dhiVmatA I uBaya (susaMgi)... (savasaM. 3; cenanxba. 649-195); veYsheVSikaveV darxvayx guNa, kamaR sAmAnayx visheVSa samavAyaveMba... tarxyaMgaLavaralilx sAMKayxve nitayxnimaRlarAdAtamxra saninxdhAnadiM guNa... (savasaM. 9; shAMtaviV. 1370-517).}}
+\newmeaning{\ullekha{BAvasAthxnAMgaliMgeVSu pArxNaliMgAMtareVdavxyaM | saninxdhAnatapxraM liMgaM sAthxpayxmeVtatxtutx dhiVmatA... (savasaM. 3; cenanxba. 649-195); AdhAyxtimxka shAsatxrX tarxyaMgaLavaralilx sAMKayxve nitayxnimaRlarAdAtamxka saninxdhAnadiM guNa tarxmAtiRka parxkaqtiye paMcaviMshatitatAtxvXtamxka (savasaM. 9; shAMtaviV. 1370-517).}}
 \end{entry}
 
 \begin{entry}
@@ -3917,7 +3916,7 @@ saMroVdhanaM savxsayx shiveV niroVdhaH ||
 \smallskip
 \pauthor{(vA. shu. A., 1. 121)}
 \smallskip
-\newmeaning{\ullekha{`maMtarx yaMtarxkirxyAmudArxnAyxsAshAcxhAvxnakAdiBiH | upacAreY... mADi, AhAvxna sAthxpana saninxroVdhana modalAdavariMdavU SoVDaSoVpacAra... (savasaM. 9; shAMtaviV. 1393-524).}}
+\newmeaning{\ullekha{modalAda upacAraMgaLiMdalU, liMgavanu siMhAsanadalilx pUjisUdu AhAvxna sAthxpana saninxroVdhana modalAdavariMdavU SoVDaSoVpacAra... (savasaM. 9; shAMtaviV. 1393-524).}}
 \end{entry}
 
 \begin{entry}
@@ -3927,21 +3926,23 @@ saMroVdhanaM savxsayx shiveV niroVdhaH ||
 \newmeaning{\artha{SaDivxdha pArxNaliMgigaLalilx obabx; saqSiTxya niyamagaLanunx tananxlilx aLavaDisikoMDiruvavanu.}
 \ullekha{SaDivxdhapArxNaliMgi- sAdhayx, veVdayx, BeVdayx, yoVgayx, saninxhita mahAnuBAvi eMdu ivu irutatxve ...saqSiTxya niyamagaLanunx sAdhisikoMDavanu sAdhayxnu... Acarisi avugaLoDane iruvavanu saninxhitanu (shivAkoV. 72-81).}}
 \newmeaning{\artha{sAninxdhayxdalilxruvavanu; samiVpadalilxruvavanu. Ayata sAvxyata saninxhita eMba mUru parxkArada diVkeSxgaLalilx oMdu.}
-\ullekha{sakaladalilx saninxhitaralalxdavaru... (savasaM. 1; basava. 1375-380); AcArave savxrUpavAda kuruhina aMgaviDidu... AcArave saninxhita AcArave pArxNavAgipepxyAgi... (savasaM. 2; alalxma. 870-255); parxsAda kAyavAda baLika savARMga utatxmAMga... pArxNa liMgavAda baLika sadA saninxhita liMga... (savasaM. 3; cenanxba. 546-167); sujana saMgatiyoLage avayxyanu tAniVga... nitayx Bakitx saninxhita niTilAkaSxnu... (savasaM. 4; sidadhxrA. 1105-317); Ganava kaMDe, anuva kaMDe... Ayata sAvxyata saninxhita suKava kaMDe... (savasaM. 5; akakxma. 205-60).}}
+\ullekha{sakaladalilx saninxhitaralalxdavaru niSakxladalilx nijavaneYduva pari eMtayAyx ? (savasaM. 1; basava. 1375-380); AcArave Amata AcArave sAvxyata AcArave saninxhita AcArave pArxNavAgipepxyAgi... (savasaM. 2; alalxma. 870-255); pArxNa liMgavAda baLika sadA saninxhita liMga... (savasaM. 3; cenanxba. 546-167); atishayada Bakitxyalilx diTa GaTita saMpananx nitayx Bakitx saninxhita niTilAkaSxnu... (savasaM. 4; sidadhxrA. 1105-317); Ganava kaMDe, anuva kaMDe... Ayata sAvxyata saninxhita suKava kaMDe... (savasaM. 5; akakxma. 205-60).}}
 \end{entry}
 
 \begin{entry}
 \word{sapatx samudarx}
 \meaning{\arthanonum{mAnavadeVhavAda piMDAMDavu saNaNx rUpada barxhAmxMDa\-veMdU, barxhAmxMDadalilxruva sapatx samudarxgaLu piMDAMDadalilxyU iveyeMdU hiVge heVLutAtxne.}}
 \newmeaning{\arthanonum{mAnavana mUtarxve lavaNa samudarx, amaqtaveV kiSxVra samudarx, shelxVSamxveVdadhi samudarx, majejxye Gaqta samudarx, mAMsaveV rasasamudarx, shoVNitaveV sureya samudarx, laMbikAsAthxnada sAvxdoVdakaveV sAvxdoVdaka samudarx.}
-\ullekha{anAdi sharaNana haqtakxmala madhayxda... AkAshave liMga, sapatxsamudarxgaLe paMcAmaqta... (savasaM. 2; alalxma. 762-210); basavaNaNxna shaqMgadalilx tuMbura nAradaru... I sapatxsamudarxMgaLoLagiha sakalapArxNigaLige saMkiVNaRteyAdiVteMdu... (savasaM. 3; cenanxba. 1382-491); beTaTxda meVloMdu daLuLxri nimuri baLiLxvaridu... AkAshakakxDari jagadoLapxsarisi sapatxsamudarxMgaLa nuMgitutx... (savasaM. 6; Adayayx. 1041-321); aNumAtarxvapapx vAyuva, manada koneya moneyalilx... sapatxsamudarx, digavxLayada girigaLu muMtAdava... (savasaM. 8; moVLimA. 1443-488); satayxloVkadiMda citfsamudarx ukikx hariyalu... sapatxsamudarxMgaLelAlx baratavu noVDA... (savasaM. 11; toVMTasi. 616-276).}}
+\ullekha{jalave pAdashile, paqthivxye piMDige AkAshave liMga, sapatxsamudarxgaLe paMcAmaqta... (savasaM. 2; alalxma. 762-210); basavaNaNxna kirugoLaginalilx samasatx samudarxMgaLu I sapatxsamudarxMgaLoLagiha sakalapArxNigaLige saMkiVNaRteyAdiVteMdu... (savasaM. 3; cenanxba. 1382-491); beTaTxda meVloMdu daLuLxri nimuri oLiLxvaridu AkAshakakxDari jagadoLapxsarisi sapatxsamudarxMgaLa nuMgitutx... (savasaM. 6; Adayayx. 1041-321); aNumAtarxvapapx vAyuva, manada koneya moneyalilx... sapatxsamudarx, digavxLayada girigaLu muMtAdava tananx satatxvXdalilx etutxvada kaMDe (savasaM. 8; moVLimA. 1443-488); satayxloVkadiMda citfsamudarx ukikx hariyalu... sapatxsamudarxMgaLelAlx baratavu noVDA... (savasaM. 11; toVMTasi. 616-276).}}
 \end{entry}
 
 \begin{entry}
 \word{sapatxQuSi}
 \meaning{\arthanonum{mariVci, atirx, aMgiVrasa, pulasatxyX, pulaha, karxtu matutx vasiSaThxreMba ELu jana parxsidadhxrAda QuSigaLu.}
-\ullekha{Adi anAdiyeMba (yeMbuda?) aMtarAtamxnalilx tiLiyalariyade... ivaru modalAda sapatxQuSiyarugaLelAlx... (savasaM. 2; alalxma. 88-258); OM vishavxnirAkAra niravayaniviRkAra avagatavAgamxnavAgata... A kALidaMDige sapatxQuSiyaru modalAda aSATxsiVti... (savasaM. 3; cenanxba. 1078-362); baLikA maMtarxMgaLige AtamxgaBaR shivagaBaR shakitxgaBaR gaBaRtarxya... liMgavane sapatxQuSigaLu, niVlada liMgavane dhurxvanu, sAthxNunAma liMgavane... (savasaM. 9; shAMtaviV. 1439-536); sAMKayx shavxpaca, agasatxyX kabibxla... iMtiV sapatxQuSiyarugaLelalxrU... (savasaM. 9; viVrago. (vacana saMcaya)); oMdu, eraDu, mUru, nAlakukx... ELu eMdare sapatxQuSigaLu... (savasaM. 10; kUDala. 622-311); sapatxQuSinamitAMGirxgaM ...sapaRBUSaNa saMgameVshaMgapiRsuveniMdugarxgaraLavanu (basapu. 57-41).}}
+\ullekha{satayxQuSi dadhiVci gwtama vashiSaThx vAlimxVki agasatxyX vishAvxmitarx ivaru modalAda sapatxQuSiyarugaLelAlx... (savasaM. 2; alalxma. 88-258);  oMbatatxneya siVma pesaru kALidaMDi A kALidaMDige sapatxQuSiyaru modalAda aSATxsiVti sahasarx QuSiyaru puTiTxdaru. (savasaM. 3; cenanxba. 1078-362);  kushamaya liMgavane sapatxQuSigaLu, niVlada liMgavane dhurxvanu, sAthxNunAma liMgavane mAkaRMDeVyanu, daBARmaya liMgavane pishAcaru (savasaM. 9; shAMtaviV. 1439-536); sAMKayx shavxpaca, agasatxyX kabibxla... iMtiV sapatxQuSiyarugaLelalxrU... (savasaM. 9; viVrago. (vacana saMcaya)); ELu eMdare noVDidedxVnapapx keVLidedxVnapapx ? ELu eMdare sapatxQuSigaLu... (savasaM. 10; kUDala. 622-311); sapatxQuSinamitAMGirxgaM ...sapaRBUSaNa saMgameVshaMgapiRsuveniMdugarxgaraLavanu (basapu. 57-41).}}
 \end{entry}
+%OM vishavxnirAkAra niravayaniviRkAra avagatavAgamxnavAgata... A kALidaMDige sapatxQuSiyaru modalAda aSATxsiVti...
+%baLikA maMtarxMgaLige AtamxgaBaR shivagaBaR shakitxgaBaR gaBaRtarxya... liMgavane sapatxQuSigaLu, niVlada liMgavane dhurxvanu, sAthxNunAma liMgavane...
 
 \begin{entry}
 \word{sapatxkavayxsana}
@@ -3952,7 +3953,7 @@ saMroVdhanaM savxsayx shiveV niroVdhaH ||
 \begin{entry}
 \word{sapatxkula pavaRta}
 \meaning{\arthanonum{iDiV barxhAmxMDaveV saMgarxharUpadalilx piMDAMDa (mAnavadeVhavAgi) kANutatxde. barxhAmxMDadalilxruva ELu pavaRtagaLu mAnava deVhadalilx elelxlilx ive eMbudakekx vivara: tirxkoVNeyalilx mahAmeVrupavaRta, adhaRkoVNeyalilx maMdarapavaRta, dakiSxNa koVNeyalilx keYlAsapavaRta, vAmakoVNeyalilx himAlayapavaRta, dakiSxNa BAgadalilx gaMdhamAdanapavaRta, UdhavxRBAgadalilx niSAdhapavaRta, roVmaleVKeyalilx viMdhayxpavaRta. idu tananx kalipxtavalalxveMdu sAdhisalu vacanakAranu IshavxroVvAcada sholxVkavanunx udadhxrisutAtxne.}
-\ullekha{paqthivx apupx teVja vAyuvAkAsha caMdarx sUyaR AtamxreMbiV... sapatxkulapavaRtaMgaLu tAnidaRlilx... (savasaM. 13; bAlasaM. 318-131).}}
+\ullekha{hima, malaya, shakitx, viMdhayx, maheVMdarx, rukaSxvaMta sahayxveMba sapatxkulapavaRtaMgaLu tAnidaRlilx... (savasaM. 13; bAlasaM. 318-131).}}
 \end{entry}
 
 \begin{entry}
@@ -4028,7 +4029,7 @@ shAvAginxmeVvaM dhAyxtevxYva sAyaMpArxtahuRneVdf budhaH ||
 \begin{entry}
 \word{sapatxdivxVpa}
 \meaning{\arthanonum{mAnavashariVravu saMkiSxpatx barxhAmxMDaveMdU barxhAmxMDadalilxruva ELu divxVpagaLu mAnavashariVradalilxveyeMdU sAdhisalu vacanakAra\-nobabxnu I vivaragaLanunx koDutAtxne. asithxsAthxnadalilxruva jaMbUdivxVpa, meVda\-sAthxnadalilx PalxkaSxdivxVpa, mAMsasAthxnadalilx kushadivxVpa, shirasAthxnadalilx kwrxMcadivxVpa, tavxcasAthxnadalilx shAlamxliVdivxVpa, roVmasaMcadalilx goVmeVdha divxVpa ive. idu tananx kalipxtavalalxveMdu toVrisalu vacanakAraru shirxVmahABagavAna uvAcadiMda sholxVkavanunx udadhxrisutAtxne.}
-\ullekha{paqthivxyiMda Ishavxra pariyaMta paMcaviMshati tatavxMgaLutapxtayx... iMtiV sapatxsamudarxMgaLa sapatxdivxVpaMgaLa parxmANavoMdAgi... (savasaM. 3; cenanxba. 1357-479); sapatxdivxVpaMgaLa racisida sAviresaLamutitxnamaMTapadoLage... (savasaM. 10; jakakxNa. 871-510); navaKaMDapaqthivx eMbudu paMcashatakoVTi yoVjana... sapatxsamudarx, sapatxdivxVpAMtara... (savasaM. 10; kADasi. 218-145); sapatxdivxVpada madhayxdalilx... (savasaM. 11; toVMTasi. 446-206); inunx sapatxdivxVpaMgaLa sAthxnavadeMteMdaDe... (savasaM. 13; bAlasaM. 263-114).}}
+\ullekha{iMtiV sapatxsamudarxMgaLa sapatxdivxVpaMgaLa parxmANavoMdAgi meVLeYsidaDe mUru koVTiyuM hadineVLu lakaSxdeYvatutx sahasarx yoVjana parimANina kaTaTxLeyAyitutx (savasaM. 3; cenanxba. 1357-479); sapatxdivxVpaMgaLa racisida sAviresaLamutitxnamaMTapadoLage obabx satiyaLu niMdu cililxMgAcaRneya mADutipaRLu noVDA ? (savasaM. 10; jakakxNa. 871-510); sapatxsamudarx, sapatxdivxVpAMtara himAcala mahAmeVrupavaRta modalAda aSaTxpavaRtaMgaLu (savasaM. 10; kADasi. 218-145); sapatxdivxVpada madhayxdalilx ipapxtetxYdu koneya vaqkaSxva kaMDenayayx (savasaM. 11; toVMTasi. 446-206); inunx sapatxdivxVpaMgaLa sAthxnavadeMteMdaDe asithxsAthxnadalilx jaMbUdivxVpavihudu (savasaM. 13; bAlasaM. 263-114).}}
 \end{entry}
 
 \begin{entry}
@@ -4036,19 +4037,19 @@ shAvAginxmeVvaM dhAyxtevxYva sAyaMpArxtahuRneVdf budhaH ||
 \src{va}
 \meaning{\arthanonum{mAnavashariVravu ELu riVtiya dhAtugaLiMdAgidudx, avelalxvU shakitxya vividha rUpagaLAgive. I ELu dhAtugaLeMdare: 1. rasa; idu jolulx, jaThararasa, itAyxdigaLige kAraNavAdudu, 2. rudhira, 3. mAMsa, 4. meVdhasusx, 5. asithx, 6. majejx, 7. shukalx (3: 252). kelavu vacanakArara parxkAra, asithx, majejx, mAMsa muMtAda Gana padAthaRgaLu paqthivxtatavxdiMdAgive; rakatx, shukalx, muMtAda darxvavasutxgaLelalx apftatavxdiMdAgive; itAyxdi.}}
 \newmeaning{\arthanonum{ELu bageya satatxvX-sAra.}
-\ullekha{hasivu, taqSe, niderx, viSayaMgaLa marede... paMceVMdirxya, sapatxdhAtu, aSaTxmadaMgaLa marede... (savasaM. 1; basava. 828-212); paMceVMdirxya sapatxdhAtuvanatigaLedalilx PalaveVno?... (savasaM. 2; alalxma. 152-45); liMgaparxsAdigaLeMbaru balalxre niVvu heVLaroV!... A parxsAdava tananx paMceVMdirxya sapatxdhAtu taqpatxvAgi BoVgisUdu... (savasaM. 3; cenanxba. 278-88); rudarxMge pAvaRtiyu, viSuNxviMge lakiSxmXyu, barxhamxMge... sapatxdhAtuva miVri paMcaBUtava jarida... (savasaM. 4; sidadhxrA. 964-270); paMceVMdirxya sapatxdhAtu aSaTxmada koMdu kUgitalAlx?... (savasaM. 5; akakxma. 275-81).}}
+\ullekha{paMceVMdirxya, sapatxdhAtu, aSaTxmadaMgaLa marede... (savasaM. 1; basava. 828-212); paMceVMdirxya sapatxdhAtuvanatigaLedalilx PalaveVno?... (savasaM. 2; alalxma. 152-45); A parxsAdava tananx paMceVMdirxya sapatxdhAtu taqpatxvAgi BoVgisUdu liMgaparxsAda gArxhakana pariyidu (savasaM. 3; cenanxba. 278-88); sapatxdhAtuva miVri paMcaBUtava jarida sharaNarigoVDitatx mAye, kapilasidadhxmalilxkAjuRnA (savasaM. 4; sidadhxrA. 964-270); paMceVMdirxya sapatxdhAtu aSaTxmada koMdu kUgitalAlx?... (savasaM. 5; akakxma. 275-81).}}
 \end{entry}
 
 \begin{entry}
 \word{sapatxmala}
 \meaning{\arthanonum{Atamxvanunx AdhAyxtimxkavAgi malina mADi, shivanoMdige bereyadaMte mADuva ELu malagaLu. iveMdare: moVha, mada, rAga, viSAda, tApa, shoVka, veYciMtayx (ivugaLalilx kelavu ariSaDavxgaRdalilx seVrive).}
-\ullekha{moVha mada rAga viSAda tApa shoVka veYciMtayxveMba... sapatxmalavAvarise matatxrAgi, tamamx tAvariyade... (savasaM. 11; savxtaMtarx. 808-417); moVha mada rAga viSAda tApa shoVka veYciMte... eMba sapatxmala vayxsana madaMgaLenanxnAvarisi... (savasaM. 11; GanaliM. 769-378); moVha mada rAga viSAda tApa shoVka veYciMtayxveMdu sapatxmalavAvarisi matatxrAgi (padagoV. 23).}}
+\ullekha{moVha mada rAga viSAda tApa shoVka veYciMtayxveMba sapatxmalavAvarise matatxrAgi, tamamx tAvariyade... (savasaM. 11; savxtaMtarx. 808-417); moVha mada rAga viSAda tApa shoVka veYciMte. eMba sapatxmala vayxsana madaMgaLenanxnAvarisi kADutitxveyayAyx nimumxva nAneMtarivenayAyx ? (savasaM. 11; GanaliM. 767-378); moVha mada rAga viSAda tApa shoVka veYciMtayxveMdu sapatxmalavAvarisi matatxrAgi (padagoV. 23).}}
 \end{entry}
 
 \begin{entry}
 \word{sapatxmAtaqke}
 \meaning{\arthanonum{bArxhimxV, mAheVshavxriV, kwmAriV, veYSaNxviV, vArAhiV, iMdArxNi matutx cAmuMDA eMba ELujana muKayx deVvateyaru.}
-\ullekha{harige iMdarxniVlaliMga, barxhamxMge sheYlaliMga... dugiRge kanakada liMga, sapatxmAtaqkeyarige maLala liMga... (savasaM. 6; Adayayx... 1145-360); `shivAvaraNa deVvAshacx savARnf saMpUJayeVdugxha|| paqthakfsAthxna sithxtAnf... shivAvaraNasathxralalxdeyidadx barxhamx viSuNx sapatxmAtaqkeyaru modalAda... (savasaM. 9; shAMtaviV. 1397-526); inunx barxhAmxMDapAladoLagaNa saqSiTxya visitxVNaRvadeMteMdaDe... cAmuMDiyeMba sapatxmAtaqkeyaru iharu... (savasaM. 13; bAlasaM. 242-94); aginxkaninxkeyarAda bArxhimx mAheVshavxri kwmAri veYSaNxvi vArAhi mAheVMdirx cAmuMDiyareMba sapatxmAtaqkeyaruM ...nAmoVcacxraNamAtarxdiM garxhAdi samasatx viGanxMgaLaM pariharisutitxkuRM (viveVka. 213).}}
+\ullekha{harige iMdarxniVlaliMga, barxhamxMge sheYlaliMga... dugiRge kanakada liMga, sapatxmAtaqkeyarige maLala liMga... (savasaM. 6; Adayayx... 1145-360); shivAvaraNasathxralalxdeyidadx barxhamx viSuNx sapatxmAtaqkeyaru modalAda deYvaMgaLanu pUjisalAgadu eMdu shivanu nirUpisutitxdadxRnayayx shAMtaviVreVshavxrA (savasaM. 9; shAMtaviV. 1397-526); barxhamx maheVshavxri kwmAri veYSaNxvi varAhi mAheVMdirx cAmuMDiyeMba sapatxmAtaqkeyaru iharu... (savasaM. 13; bAlasaM. 242-94); aginxkaninxkeyarAda bArxhimx mAheVshavxri kwmAri veYSaNxvi vArAhi mAheVMdirx cAmuMDiyareMba sapatxmAtaqkeyaruM ...nAmoVcacxraNamAtarxdiM garxhAdi samasatx viGanxMgaLaM pariharisutitxkuRM (viveVka. 213).}}
 \end{entry}
 
 \begin{entry}
@@ -4073,7 +4074,7 @@ tadAdhxraNeVna supirxVtA jayaM dadati mAtaraH ||
 \begin{entry}
 \word{sapatxvayxsana}
 \meaning{\arthanonum{tanu, mana, dhana, rAjayx, vishavx, utAsxha matutx seVvaka eMba ELu viSayagaLige saMbaMdhisidaMtiruva atAyxsakitx.}
-\ullekha{munUnxra aruvatutx nakaSxtarxkekx bAyibiTuTxkoMDipupxde siMpu... idu kAraNa, kUDalasaMgana sharaNaru sapatxvayxsanigaLalAlxgi. (savasaM. 1; basava. 810-208); tanuveMba deVvasAthxnadoLage masatxkAgarxveMba sejAjxgaqhadalilx... aSaTxmada sapatxvayxsanaMgaLeMba Ane kuduregaLu saha... (savasaM. 2; alalxma. 1235-365); shiVlavaMtarelalx aMtirali... tamamxlilxruva aSaTxmadaMgaLu, sapatxvayxsanaMgaLu... (savasaM. 3; cenanxba. 1606-585); Adi anAdi nitAyxnitayxva tiLiyalariyade... aSaTxmadaMgaLu, sapatxvayxsanaMgaLu... (savasaM. 5; akakxma. 58-21); shivaBakitx saMgadiMdAdudalalx... sapatxvayxsana udarAginx uLuLxdalalx... (savasaM. 8; maDimA. 746-275); tanuvayxsana manoVvayxsana dhanavayxsana rAjayxvayxsana vishavxvayxsana utAsxhavayxsana seVvakavayxsanaveMba sapatxvayxsanadiM hasaMgeTuTx (viveVka. 197); jUjeMbudiVga sapatxvayxsanadoLagaLadu munigaLigayoVgayx (viVsheYpu. 2-22-16).}}
+\ullekha{paramaMgalalxde haruSatikeyilelxMdu karaNAdi guNaMgaLa maredaru, idu kAraNa, kUDalasaMgana sharaNaru sapatxvayxsanigaLalAlxgi. (savasaM. 1; basava. 810-208); SaDaMgagaLeMba moLegaLaM balidu, sapatxdhAtuveMba Jalilx paTeTxyanalaMkarisi, aSaTxmada sapatxvayxsanaMgaLeMba Ane kuduregaLu saha... (savasaM. 2; alalxma. 1235-365); shiVlavaMtarelalx aMtirali... tamamxlilxruva aSaTxmadaMgaLu, sapatxvayxsanaMgaLu... (savasaM. 3; cenanxba. 1606-585); aSaTxmadaMgaLu, sapatxvayxsanaMgaLu ariSaDavxgaRgaLu, SaDUmiRgaU, SaDaBxrXmegaLu... iMtivAdiyAgi toVruva toVrikeyeVnU nAnalalx, nananxvalalx (savasaM. 5; akakxma. 58-21); shivaBakitx saMgadiMdAdudalalx... sapatxvayxsana udarAginx uLuLxdalalx... (savasaM. 8; maDimA. 746-275); tanuvayxsana manoVvayxsana dhanavayxsana rAjayxvayxsana vishavxvayxsana utAsxhavayxsana seVvakavayxsanaveMba sapatxvayxsanadiM hasaMgeTuTx (viveVka. 197); jUjeMbudiVga sapatxvayxsanadoLagaLadu munigaLigayoVgayx (viVsheYpu. 2-22-16).}}
 \end{entry}
 
 \begin{entry}
@@ -4125,7 +4126,7 @@ sharaNasathxlameYkayxsayx sathxlaM sAyxtf sapatxviMshatiH ||
 \begin{entry}
 \word{sapatxvidhaparxsAda}
 \meaning{\arthanonum{liMgApaRNeya apeVkeSxyiMda salilxsuva ApAyxyana parxsAda, guruliMga\-jaMgamagaLige apiRsi sivxVkarisuva samayaparxsAda, paMceVMdirxyagaLalilx paMcaviSaya padAthaRgaLanunx paMcaliMgagaLige samapiRsuva paMceVMdirxyavirahitaparxsAda, shivaciMtaneyiMda kUDi salilxsuva karaNacatuSaTxyavirahitaparxsAda, tirxvidhAMgagaLalilx tirxvidhaliMgagaLanunx saMbaMdhisi A liMgaveV tAneMdu \hbox{BAvisi} apiRsuva sadABxvaparxsAda, bahiraMgavAyxpAragaLanunx toredu arivina mAgaR hiDidu salilxsuva samatAparxsAda matutx guruvina anugarxharUpavAda jAcnxnaparxsAda eMba ELu bageya parxsAdagaLu.}
-\ullekha{ayAyx, jagatApxvana nimitayxthaRvAgi... modalAdavu sapatxvidhaparxsAdavenisuvadayayx... (savasaM. 4; sidadhxrA. 71-21).}}
+\ullekha{ApAyxyana, samaya, paMceVMdirxya virahita, karanAcatuSatxyA virahita, sadABxva, samate, jAcnxna parxsAda modalAdavu sapatxvidhaparxsAdavenisuvadayayx... (savasaM. 4; sidadhxrA. 71-21).}}
 \end{entry}
 
 \begin{entry}
@@ -4160,7 +4161,7 @@ viVrasheYvAdiBeVdeVna sheYvaM sapatxvidhaM tivxti |
 
 \begin{entry}
 \word{sapatxsoVpAna}
-\meaning{\ullekha{savxgaRkekx ELu soVpAnavipuRdanu ArU ariyaralalx!... iMtiV sapatxsoVpAnaMgaLa balalx sadaBxkatxMge... (savasaM. 14; SaNumxKa. 395-218); jaMgamava kANutatx sadaBxkatxnu kuLitAsanava biTuTx idiredudx naDevudeV oMdaneya soVpAna ...A jaMgamadalilx anuBAvava besagoMbuvudeV ELaneya soVpAna iMtiV sapatxsoVpAnaMgaLa balalx sadaBxkatxMge keYlAsa karataLAmaLakavu (aKaMDeV. 74-46).}}
+\meaning{\ullekha{savxgaRkekx ELu soVpAnavipuRdanu ArU ariyaralalx!... iMtiV sapatxsoVpAnaMgaLa balalx sadaBxkatxMge keYlAsa karatALamaLakavalalxde, tanuvasavesade, manavadaMDisade. (savasaM. 14; SaNumxKa. 395-218); jaMgamava kANutatx sadaBxkatxnu kuLitAsanava biTuTx idiredudx naDevudeV oMdaneya soVpAna ...A jaMgamadalilx anuBAvava besagoMbuvudeV ELaneya soVpAna iMtiV sapatxsoVpAnaMgaLa balalx sadaBxkatxMge keYlAsa karataLAmaLakavu (aKaMDeV. 74-46).}}
 \end{entry}
 
 \begin{entry}
@@ -4188,7 +4189,7 @@ saparxkAMDamidaM shiVlaM vijecnxVyaM BakitxsAdhanamf ||
 \newmeaning{\arthanonum{nitAyxcAra: ilalxdidudakekx Ashisade, baMdudanunx tirasakxrisade, EneV baMdarU parxsAdaBAvadiMda aMdare (nitayxparxsAdiyaMte) naDedukoLuLxvudeV nitAyxcAra.}}
 \newmeaning{\arthanonum{dhamARcAra: parxsAda pAdoVdakavananxlalxde matetxVnanUnx sivxVkarisadiruvudu, yAvAgalU shivamaMtarxvanunx japisuvudu dhamARcAravenisikoLuLxtatxde.}}
 \newmeaning{\arthanonum{savARcAra: meVle heVLida elalx AcAragaLanUnx (savARcAravanunx) liMgAMga sAmarasayxda saluvAgi hAgU adu sididhxsuvaMte mADuvudeV savARcAra.}
-\ullekha{ayAyx, shirxVguru karuNisikoTaTx liMga jaMgamavalalxde... sapAtxcArava goVpayva mADi... (savasaM. 3; cenanxba. 930-293); ayayx! shirxVguruliMgajaMgamada veVdhAmaMtarxkirxyAdiVkeSxge horagAda... sapAtxcArava saMbaMdhaviTuTx... (savasaM. 6; aMbiga. 36-17); ayayx, keVLa, parxmathagaNaMgaLelalx... paMcAcAradAcaraNe, sapAtxcArada saMbaMdhada naDenuDiya vicArisi... (savasaM. 10; gurusi. 731-418); sapAtxcAragaLu ...ivugaLa mUlaka manuSayxna aMtaraMgakirxyegaLu shudadhxvAgutatxve (shivAkoV. 94-116).}}
+\ullekha{AcArada kuruha tiLidu paMcAcArava bahiSakxrisi sapAtxcArava goVpayva mADi... (savasaM. 3; cenanxba. 930-293); sapAtxcArava saMbaMdhaviTuTx aSATxvaraNada kalenelegaLa oLagu-horagu enanxde (savasaM. 6; aMbiga. 36-17); paMcAcAradAcaraNe, sapAtxcArada saMbaMdhada naDenuDiya vicArisi tanumanadhanavanopipxsi sharaNeMdarayayx (savasaM. 10; gurusi. 731-418); sapAtxcAragaLu ...ivugaLa mUlaka manuSayxna aMtaraMgakirxyegaLu shudadhxvAgutatxve (shivAkoV. 94-116).}}
 \end{entry}
 
 \begin{entry}
@@ -4246,8 +4247,8 @@ saPalaM shiVlamituyxkatxM sadayxH sididhxkaraM paramf ||
 
 \begin{entry}
 \word{sabiVjadiVkeSx}
-\meaning{\arthanonum{AdhAradiVkeSxyalilxruva sabiVja, nibiRVja, adhikAra matutx niradhikAra eMba nAlukx bageya diVkeSxgaLalilx oMdu; kamaRvishudidhxyanunxMTumADuva diVkeSx.}
-\ullekha{matatxmA sAdhAradiVkeSxyu sabiVjadiVkeSx nibiRVjadiVkeSx cinamxya diVkeSx... (savasaM. 9; shAMtaviV. 1376-519); a sabiVjadiVkeSxye loVkadhamiRNiyeMdu shivadhamiRNiyeMduBayavidhamapupxdu (pArake. 272).}}
+\meaning{\arthanonum{AdhAradiVkeSxyalilxruva sabiVja, nibiRVja, adhi\-kAra matutx niradhikAra eMba nAlukx bageya diVkeSxgaLalilx oMdu; kamaRvishudidhxyanunxMTumADuva diVkeSx.}
+\ullekha{matatxmA sAdhAradiVkeSxyu sabiVjadiVkeSx nibiRVjadiVkeSx cinamxya diVkeSxyeMdu mUru parxkAravu (savasaM. 9; shAMtaviV. 1376-519); a sabiVjadiVkeSxye loVkadhamiRNiyeMdu shivadhamiRNiyeMduBayavidhamapupxdu (pArake. 272).}}
 \end{entry}
 
 \begin{entry}
@@ -4285,7 +4286,7 @@ yathAkarxmaM kamaRBakitxjAcnxnakAMDeVSu tAH suPxTAH ||
 \begin{entry}
 \word{samakaLe}
 \meaning{\arthanonum{oMdeV riVtiyiruva savxlakaSxNa. parashiva heVge citfsavxrUpa hAgU shudadhxnoV hAgeyeV AdhAyxtimxka dheyxVyavanunx sAdhisidavanU citfsavxrUpa matutx shudadhx. hiVge samakaLe idadxlilx mAtarx, jiVva matutx shiva bereyabalalxru - niVru niVru beretaMte.}
-\ullekha{samarati, samakaLe, samasuKa, sAvxnuBAva... (savasaM. 1; basava. 928-244); manakekx mana EkAthaRvAgi, kAyakekx kAya samadashaRnavAgi... pArxNakekx pArxNa samakaLeyAgi idadxvaralilx... (savasaM. 2; alalxma. 1440-427); kUTada racaneya saMdaLidu noVTa nimamx naTuTx... samakaLe eMdapupxdayAyx, samarati eMdapupxdayAyx... (savasaM. 4; sidadhxrA. 469-132); Bakitx sameVLa etitxda haLavige sutatxlU beVvina daMDe... samakaLe samarati nereva Baradalilx... (savasaM. 7; gajeVsha. 247-87).}}
+\ullekha{samarati, samakaLe, samasuKa, sAvxnuBAva hiridu kiridAdudanArU ariyaru (savasaM. 1; basava. 928-244); manakekx mana EkAthaRvAgi, kAyakekx kAya samadashaRnavAgi... pArxNakekx pArxNa samakaLeyAgi idadxvaralilx mana vacana kAyadalilx shabadxsUtaka huTiTxdaDe seYrisabAradu keVLA (savasaM. 2; alalxma. 1440-427); kUTada racaneya saMdaLidu noVTa nimamxlilx naTuTx. samakaLe eMdapupxdayAyx, samarati eMdapupxdayAyx. (savasaM. 4; sidadhxrA. 469-132); Bakitx sameVLa etitxda haLavige sutatxlU beVvina daMDe raNaraMga hAsina meVle samakaLe samarati nereva Baradalilx... (savasaM. 7; gajeVsha. 247-87).}}
 \end{entry}
 
 \begin{entry}
@@ -4296,8 +4297,10 @@ yathAkarxmaM kamaRBakitxjAcnxnakAMDeVSu tAH suPxTAH ||
 \begin{entry}
 \word{samatAguNa}
 \meaning{\arthanonum{tAratamayxvilalxda manasusx. beVku, beVDagaLilalxda, oLeLxyadu keTaTxdu eMdu BeVda mADada, elalx parisithxtiyalUlx shAMtacitatxdiMda iruva manasusx.}
-\ullekha{iMdige nimiSakekx baduRMkade hoVgeya... nimamxdoMdu samatAguNa enanxneMdu baMdu... (savasaM. 4; sidadhxrA. 241-71).}}
+\ullekha{baduRMkidaDe mana vicaCxMdavAgadoMdeyaMdadalilxpapxMtapapx nimamxdoMdu samatAguNa enanxneMdu baMdu... (savasaM. 4; sidadhxrA. 241-71).}}
 \end{entry}
+
+%prathibha, ullekha corrections from here
 
 \begin{entry}
 \word{samatAjala}
